trunk/Archive2/46/4f383a4a9413d4/output
main.cpp:1:1: error: expected unqualified-id before string constant
 "hello cunt\n"
 ^
